@@ -1,0 +1,5 @@
+import FWCore.ParameterSet.Config as cms
+
+MicroStateService = cms.Service( "MicroStateService",
+)
+
