@@ -1,0 +1,5 @@
+import FWCore.ParameterSet.Config as cms
+
+TimeProfilerService = cms.Service( "TimeProfilerService",
+)
+
